src/scss/botchat.scss
/* ... */
    .wc-floating-wrap {
        position: fixed;
        right: $rightWeight; 
        bottom: $floatingBottom;
        width:150px;
        z-index: 200000;
        text-align: center;

        @include mobileAndTablet {
            // This is being set inline for desktop
            right: 0px !important;
            bottom: $floatingBottom !important;
        }
    }

    .wc-floating-message {
        cursor: pointer;
        display: inline-block;
        word-break: break-word;
        overflow: hidden;
        background: white;
        padding:12px;
        position: relative;
        bottom: 23px;
        font-size: 14px;
        border-radius: 12px;
        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.26);
        visibility: hidden;
        opacity: 0;
        transition: all 1s $cubic;
        transition-delay: 2s;

        &.visible {
            opacity: 1;
            visibility: visible;
        }
    }

    .wc-floating {
        cursor: pointer;
        width: $floatingHeight;
        height: $floatingHeight;
        margin: 0 auto;
        background-color: $gideon-logo-yellow;
        border-radius: 80px;
        box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.16), 0 4px 10px 0 rgba(0, 0, 0, 0.26);
        z-index: 1000;

        $difference: -7px;

        svg {
            z-index: 1001;
            position: relative;
            top: 3px;
            width:$floatingHeight + $difference;
            height: $floatingHeight + $difference;
            left: -1px;
            background-size: 80px;
        }

        &__closed {
            display: none;
        }
    }

/* messages */

    .wc-message-wrapper {
        animation: animationFrames 2s;
        animation-iteration-count: 1;
        clear: both;
        margin-bottom: 5px;
        overflow: hidden;
        position: relative;
        /*transition: max-height 2s ease-in-out;*/
    }

    .wc-message-wrapper-overflow-visible {
        overflow: visible;
    }

    .wc-message-wrapper.bot {
      display:flex;
      flex-direction: row;
    }

    .wc-message-bot-name {
      color: $c05;
      float: left;
      margin-left: 47px;
      margin-bottom: 4px;
      font-weight: normal;
      font-style: normal;
      font-stretch: normal;
      line-height: normal;
      letter-spacing: 0.03em;
      font-size: 12px;
    }

    .wc-message-avatar{
        width: $avatarWidth;
        height: $avatarWidth;
        min-width: 25px;
        border-radius: 22px;
        display: flex;
        align-items: center;
        justify-content: center;
        color: #f6f7f8;
        margin: auto 0 16px 0;
        background: #3F6DE1;
    }

    .wc-message-avatar.blank{
      color: transparent; 
      opacity: 0;
        // color: #f6f7f8; 
        // background: #3F6DE1;
    }

    @keyframes animationFrames{
        0% {
            /*max-height: 0;*/
            opacity: 0;
        }
        20% {
            opacity: 1;
        }
        100% {
            /*max-height: 2000px;*/
        }
    }

    .wc-message {
        position: relative;
        min-height: 49px;
        margin-bottom: 3px;
    }

    .wc-message-wrapper.carousel .wc-message {
        max-width: none;
        padding-right: 8px;
    }

    .wc-message svg.wc-message-callout {
        height: 22px;
        position: absolute;
        stroke: none;
        top: 12px;
        width: 6px;
    }
/* ... */

